--- a/Tsukino.Core/Tsukino.Core.vcxproj.filters
+++ b/Tsukino.Core/Tsukino.Core.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="include\Tsukino\Core\Window.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="include\Tsukino\Core\typedef.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
