--- a/Tsukino.Renderer/Tsukino.Renderer.vcxproj.filters
+++ b/Tsukino.Renderer/Tsukino.Renderer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="include\Tsukino\Renderer\Shader.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="include\Tsukino\Renderer\ConstantBuffer.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
