--- a/Tsukino.Core/Tsukino.Core.vcxproj.filters
+++ b/Tsukino.Core/Tsukino.Core.vcxproj.filters
@@ -15,19 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Tsukino\Core\Log.h">
+    <ClInclude Include="include\Tsukino\Core\Log.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\Tsukino\Core\Window.h">
+    <ClInclude Include="include\Tsukino\Core\Window.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\Tsukino\Core\typedef.h">
+    <ClInclude Include="include\Tsukino\Core\typedef.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\Tsukino\Core\Math\Matrix.h">
+    <ClInclude Include="include\Tsukino\Core\Math\Matrix.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -39,6 +39,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\Log.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Math\Matrix.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
