--- a/Tsukino.Engine/Tsukino.Engine.vcxproj
+++ b/Tsukino.Engine/Tsukino.Engine.vcxproj
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\Tsukino\Engine\Transform.h" />
+    <ClInclude Include="include\Tsukino\Engine\Transform.hpp" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
