--- a/Tsukino.Engine/Tsukino.Engine.vcxproj.filters
+++ b/Tsukino.Engine/Tsukino.Engine.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="pch.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\Tsukino\Engine\Transform.h">
+    <ClInclude Include="include\Tsukino\Engine\Transform.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
