--- a/Tsukino.Core/Tsukino.Core.vcxproj.filters
+++ b/Tsukino.Core/Tsukino.Core.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="src\Math\Matrix.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="include\Tsukino\Core\ECS\Entity.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
