--- a/Tsukino.Engine/Tsukino.Engine.vcxproj.filters
+++ b/Tsukino.Engine/Tsukino.Engine.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="include\Tsukino\Engine\Transform.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="include\Tsukino\Engine\ECS\ISystem.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
