--- a/Tsukino.Core/Tsukino.Core.vcxproj.filters
+++ b/Tsukino.Core/Tsukino.Core.vcxproj.filters
@@ -30,7 +30,16 @@
     <ClInclude Include="include\Tsukino\Core\Math\Matrix.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="include\Tsukino\Core\ECS\Registry.hpp">
+    <ClInclude Include="include\Tsukino\Core\ECS\Registry\Registry.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Tsukino\Core\ECS\System\ISystem.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Tsukino\Core\ECS\Component\TransformComponent.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Tsukino\Core\ECS\System\TransformSystem.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -47,7 +56,10 @@
     <ClCompile Include="src\Math\Matrix.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="include\Tsukino\Core\ECS\Entity.hpp">
+    <ClCompile Include="include\Tsukino\Core\ECS\Entity\Entity.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\System\TransformSystem.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
