--- a/Tsukino.Core/Tsukino.Core.vcxproj.filters
+++ b/Tsukino.Core/Tsukino.Core.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="include\Tsukino\Core\ECS\System\TransformSystem.hpp">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="include\Tsukino\Core\IO\FileSystem.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -60,6 +63,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="src\ECS\System\TransformSystem.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\IO\FileSystem.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
